⚙️[Firebase]SPMでFirebaseパッケージををインストールした。
【対応内容】
・SPMでFirebaseパッケージををインストールした。
・Firebaseを利用するため、AppDelegateを作成した。

【影響範囲】
・Firebase

【動作確認】
・ビルドに成功する。

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ DerivedData/
 Pods/*
 Carthage/Build/
 
+## Firebase
+GoogleService-Info.plist
+
+## APIKey
+Credentials.swift
+
 ## Other
 *.moved-aside
 *.xccheckout
@@ -41,4 +47,3 @@ Carthage/Build/
 xcuserdata/
 *.moved-aside
 !.gitkeep
-Credentials.swift
